--- a/style.css
+++ b/style.css
@@ -10,17 +10,11 @@ hg
   display: flex;
   justify-content: center;
   align-items: center;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
 }
 
-/* #india-map {
-  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
-} */
+/* dont change above */
 
-#india-map:hover {
-  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
-  fill-opacity: 0.7;
-}
-
-/* #INDL {
+#india-map {
   
-} */
+}
