add about page and complete navbar

--- a/style.css
+++ b/style.css
@@ -35,15 +35,21 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  max-width: 400;
+  margin: 0 45px;
+  padding: 0px;
 }
 
 .logo {
   margin: 0;
-  font-size: 24px;
+  font-size: 38px;
 }
+
+nav h1 {
+  cursor: default;
+}
+
+nav 
 
 .nav-links {
   list-style: none;
@@ -57,13 +63,61 @@ body {
 }
 
 .nav-links li a {
+  font-weight: bolder;
+  font-size: 20px;
   color: #fff;
-  text-decoration: none;
+  text-decoration: dashed;
   transition: color 0.3s ease;
 }
 
 .nav-links li a:hover {
-  color: #ffd700;
+  color: #0379a8;
 }
 
 /* //////////////////////////////////////////////////////////////// NAVBAR //////////////////////////////////////////////////////////////// */
+
+/* ////////////////////////////////////////////////////////////// ABOUT PAGE /////////////////////////////////////////////////////////////// */
+
+#head-top {
+  background: rgba(0, 0, 0, 0.1);
+  border-bottom: 1px dashed #030500;
+  padding: 20px;
+  margin: 0 0 40px 0;
+  font-size: 30px;
+}
+
+header h1 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 0;
+  text-align: center;
+  font-weight: bold;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal,
+    monospace;
+  color: black;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1),
+    0 0 10px rgba(181, 232, 83, 0.1);
+  letter-spacing: -1px;
+  -webkit-font-smoothing: antialiased;
+}
+
+#about-body {
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal,
+    monospace;
+}
+
+#main-content {
+  margin-top: 20px;
+  margin-left: 250px;
+}
+
+.links {
+  color: black;
+}
+
+/* ////////////////////////////////////////////////////////////// ABOUT PAGE /////////////////////////////////////////////////////////////// */
