complete mouse hover function on states

--- a/style.css
+++ b/style.css
@@ -49,9 +49,7 @@ nav h1 {
   cursor: default;
 }
 
-nav 
-
-.nav-links {
+nav .nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -73,8 +71,6 @@ nav
 .nav-links li a:hover {
   color: #0379a8;
 }
-
-/* //////////////////////////////////////////////////////////////// NAVBAR //////////////////////////////////////////////////////////////// */
 
 /* ////////////////////////////////////////////////////////////// ABOUT PAGE /////////////////////////////////////////////////////////////// */
 
@@ -120,4 +116,16 @@ header h1 {
   color: black;
 }
 
-/* ////////////////////////////////////////////////////////////// ABOUT PAGE /////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////// STATE-NAME-BOX ////////////////////////////////////////////////////////////////// */
+
+.popup {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  display: none;
+  pointer-events: none;
+}
+
+/* ///////////////////////////////////////////////////////////////// ENDS ////////////////////////////////////////////////////////////////// */
